--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,5 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Nicole Zattarin
-
-# insert image 
-![image](img.png)
+twitter_username: zattacole
+github_username:  nicolezattarin
