--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,6 @@ plugins:
 title: Nicole Zattarin
 twitter_username: zattacole
 github_username:  nicolezattarin
+
+# include image
+<img src="img.png" alt="img" width="200"/>
