--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,7 @@ title: Nicole Zattarin
 logo: /assets/img/img.png
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
-google_analytics:
+twitter_username: zattacole
+github_username:  nicolezattarin
+email: nicole.zattarin@gmail.com
 theme: jekyll-theme-minimal
