--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Nicole Zattarin
 logo: /assets/img/img.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
+description: Quant Dev @ XSOR Capital
 twitter_username: zattacole
 github_username:  nicolezattarin
 email: nicole.zattarin@gmail.com
